# sisifo-pyspark

./: pyproject.toml
sisifo_pyspark/: __init__.py  add_column.py  add_n.py  entity_from_spark_df.py  entity_row_invalidator.py  entity_split_invalidator.py  is_null.py  pyspark_backend.py  utils.py  zip_and_explode.py
tests/: conftest.py  test_add_column.py  test_add_n.py  test_entity_from_spark_df.py  test_entity_row_invalidator.py  test_entity_split_invalidator.py  test_is_null.py  test_zip_and_explode.py
